modules/checklists/assets/css/global-checklists.css
#pp_checklist_meta em {
    color: #afafaf;
}

.pp-checklists-req.status-yes * {
    color: #66bb6a;
    font-weight: normal;
}

.pp-checklists-req.status-no * {
    color: #ef5350;
    font-weight: bold;
}

.pp-checklists-small-input {
    width: 50px;
}

.pp-checklists-medium-input {
    width: 60px;
}

.pp-checklists-action-label {
    margin-left: 25px;
}

.pp-checklists-modal-list {
    text-align: center;
}

.pp-checklists-modal-list ul {
    text-align: left;
    list-style: square;
    display: inline-block;
}

.pp-checklists-warning-icon {
    font-size: 30px;
    padding-top: 1px;
    width: 30px;
    height: 30px;
    color: #ef5350;
}

.pp-checklists-requirements-settings {
    width: 100%;
    border: 1px solid silver;
    background: #fff;
}

.pp-checklists-requirements-settings th {
    width: auto;
    text-align: left;
    height: 35px;
    padding: 10px;
    box-sizing: border-box;
    border-bottom: 1px solid silver;
    font-weight: normal;
}

.pp-checklists-requirements-settings td {
    height: 80px;
    padding: 10px;
    box-sizing: border-box;
    line-height: 32px;
}

.pp-checklists-custom-item {
    cursor: pointer;
    color: #ef5350;
    font-weight: bold;
}

.pp-checklists-custom-item .dashicons {
    border: 1px solid silver;
    border-radius: 4px;
}

#pp-checklists-post-type-filter {
    margin-bottom: 20px;
}

#pp-checklists-post-type-filter a {
    padding: 8px 18px;
    border: 1px solid silver;
}

#pp-checklists-post-type-filter a.pp-selected {
    font-weight: bold;
    background-color: #fff;
}

#pp-checklists-global #submit {
    margin-top: 50px;
}

.pp-checklists-number label {
    min-width: 30px;
    display: inline-block;
}

.pp-checklists-number input {
    min-width: 80px;
}

#pp-checklists-add-button {
    border: 1px solid silver;
    padding: 10px;
    line-height: 20px;
}


.pp-checklists-req .status-label {
    padding-left: 3px;
}

.pp-checklists-req.pp-checklists-custom-item .status-label {
    padding-left: 1px;
}

@media only screen and (max-width: 781px) {
    #pp-checklists-global table th {
        display: none;
    }

    .pp-checklists-requirements-settings td {
        height: auto!important;
    }

    .pp-checklists-requirement-row td {
        padding-left: 20px;
    }

    .pp-checklists-requirement-row td:first-child {
        padding-left: 10px;
    }

    .pp-checklists-number {
        display: inline-block;
        margin-right: 10px;
    }
}

